deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cctui-server
spec:
  selector:
    app: cctui-server
  ports:
    - port: 8700
      targetPort: 8700
      protocol: TCP
